gitops/apps/velero/webui-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-backend
  labels:
    app: webui-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui-backend
  template:
    metadata:
      labels:
        app: webui-backend
    spec:
      serviceAccountName: webui-backend
      containers:
        - name: api
          image: docker.io/dserio83/velero-api:0.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
              name: api
