gitops/apps/velero/webui-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-frontend
  labels:
    app: webui-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui-frontend
  template:
    metadata:
      labels:
        app: webui-frontend
    spec:
      containers:
        - name: webserver
          image: docker.io/dserio83/velero-ui:0.2.7
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
