gitops/apps/velero/webui-watchdog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-watchdog
  labels:
    app: webui-watchdog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui-watchdog
  template:
    metadata:
      labels:
        app: webui-watchdog
    spec:
      serviceAccountName: velero-ro
      containers:
        - name: watchdog
          image: dserio83/velero-watchdog:0.1.7
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1256Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8001
