gitops/apps/velero/webui-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: api
  selector:
    app: webui-backend
