gitops/apps/velero/webui-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
  selector:
    app: webui-frontend
