gitops/apps/velero/webui-watchdog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-watchdog
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: http
  selector:
    app: webui-watchdog
